--- a/src/view/ManageEvents.fxml
+++ b/src/view/ManageEvents.fxml
@@ -30,7 +30,7 @@
             <Menu fx:id="menuManage" mnemonicParsing="false" text="MANAGE">
                <items>
                   <MenuItem fx:id="menuBoardGames" mnemonicParsing="false" onAction="#handleActions" text="Manage Board Games" />
-                  <MenuItem fx:id="menuBorrowings" mnemonicParsing="false" onAction="#handleActions" text="Manage Borrowing" />
+                  <MenuItem fx:id="menuBorrowing" mnemonicParsing="false" onAction="#handleActions" text="Manage Borrowings" />
                   <MenuItem fx:id="menuStudents" mnemonicParsing="false" onAction="#handleActions" text="Manage Students" />
                   <MenuItem fx:id="menuEvents" mnemonicParsing="false" onAction="#handleActions" text="Manage Events" />
                   <MenuItem fx:id="menuUpcomingGames" mnemonicParsing="false" onAction="#handleActions" text="Manage Upcoming Games" />
